# ADAP

./: .gitignore  adap  pyproject.toml
progs/: set_adap  set_adap.csh
progs/scripts/: nvi-stats  syncdev  syncnvi  update_aprioris_eop
scripts/: analyzed  andash  aps  aps2  auxfiles  cddislogger  chkskd  control  correlators  database  datacenters  fetch  fetch_vgosdb  get_return  intmonit  logger  make_venv  massloading  mets  nvgosdb  nvgosdb.csh  scanner.corr  scanner.dc  set_csolve.csh  setup  setup-nvi.csh  setup.csh  test.csh  today  tst  uploader  vget  vgosdb  vgosdb.csh  vgosdb.old  vlbalogs  vmf  watchdog  watchdog-nvi  web
src/: VLBIauxfiles.py  VLBIchkskd.py  VLBIcontrol.py  VLBIcorrelators.py  VLBIdatacenters.py  VLBIintmonit.py  VLBIlogger.py  VLBImassloading.py  VLBImets.py  VLBIscanner.py  VLBItoday.py  VLBIuploader.py  VLBIvgosdb.py  VLBIvlbalogs.py  VLBIvmf.py  VLBIwatchdog.py  VLBIweb.py  make
src/aps/: __init__.py  __main__.py  action_items.py  astro.py  baw.py  eob.py  eop.py  eop_format.py  eopk.py  eopm.py  eopm2.py  eops.py  gal.py  leap_seconds.py  notes.py  process.py  processing.py  report.py  reports.py  simul.py  simul24.py  snr.py  snranal.py  solve.py  spool.py  standalone.py  stw.py  submit.py  vmf.py  weight.py  windows.py
src/ivsdb/: __init__.py  __main__.py  fix_code_size.py  loaders.py  models.py
src/performance/: __init__.py  __main__.py  analysis.py  correlator.py  (+2 more)
tools/: andash.py  aprioris_eop.py  azel.py  certificate.py  clean_wrappers.py  fix_db.py  fix_wgt.py  ivs-ops.py  mailit.py  need-gmail.py  nvi-report.py
(+106 files in other folders)
