[project]
name = "ADAP"
version = "2.2.0"
requires-python = ">=3.8"
#

dependencies = [
    "AdvancedHTMLParser",
    "cryptography>=3.1.1",
    "PyQt5>=5.15.6",
    "beautifulsoup4>=4.10.0",
    "python-docx>=0.8.11",
    "google-api-python-client>=1.12.5",
    "httplib2>=0.18.1",
    "netCDF4>=1.5.4",
    "oauth2client>=4.1.3",
    "pandas",
    "paramiko>=2.7.2",
    "psutil>=5.7.3",
    "pytz>=2021.3",
    "requests>=2.24.0",
    "scp>=0.14.1",
    "SQLAlchemy>=1.3.20",
    "sshtunnel>=0.1.5",
    "tabulate>=0.8.9",
    "tzlocal>=2.1",
    "Unidecode>=1.3.3",
    "urllib3>=1.25.10",
    "numpy>=1.19.3",
    "pika>=1.1.0",
    "pycurl>=7.44.1",
    "toml>=0.10.1"
]